Fixed bug #81458: Regression: Incorrect difference after timezone change